[project]
name = "dsa-playground"
version = "0.1.0"
description = "DSA"
authors = [
    {name = "Vipul Dessai",email = "badgamerbad@gmail.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tomli (>=2.4.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=26.3.1,<27.0.0)"
]

[tool.black]
line-length = 88
target-version = ["py310"]
skip-string-normalization = true
